--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
         <link href="estilos/tabs.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <header>Aplicacion de Prueba</header>
-        <img >
+        <form role="dialog" data-type="action">
+            <header>Aplicacion de Prueba</header>
+            <menu > 
+                <img src="imagenes/photo.jpg" alt="Smiley face">    
+            </menu>
+        </form>
     </body>
 </html>
