Cambios de Prueba

--- a/index.html
+++ b/index.html
@@ -2,14 +2,27 @@
 <html>
     <head >
         <link href="estilos/action_menu.css" rel="stylesheet" type="text/css">
-        <link href="estilos/tabs.css" rel="stylesheet" type="text/css">
+        <link href="estilos/confirm.css" rel="stylesheet" type="text/css">
+        <link href="estilos/headers.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <form role="dialog" data-type="action">
+        <!-->
+            <form role="dialog" data-type="confirm">
             <header>Aplicacion de Prueba</header>
             <menu > 
-                <img src="imagenes/photo.jpg" alt="Smiley face">    
+                <img src="imagenes/splashblanco.png" alt="Smiley face">    
             </menu>
-        </form>
+        </form> 
+        <!-->
+        <section role="region">
+              <header>
+                      <button><span class="icon icon-close">close</span></button>
+                          <menu type="toolbar"><button>done</button></menu>
+                              <h1>Title</h1>
+                                </header>
+                                  <header>
+                                          <h2>Subheader text</h2>
+                                            </header>
+                                        </section>
     </body>
 </html>
