--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                               <h1>Title</h1>
                                 </header>
                                   <header>
-                                          <h2>Subheader text</h2>
+                                    <img src="imagenes/splashblanco.png" alt="Smiley face"> 
                                             </header>
                                         </section>
     </body>
