Cambios sobre algunas etiquetas

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         </form> 
         -->
         <section role="region">
-              <header>
-                      <button><span class="icon icon-close">close</span></button>
-                          <menu type="toolbar"><button>done</button></menu>
-                              <h1>Title</h1>
-                                </header>
-                                  <header>
-                                    <img src="imagenes/splashblanco.png" alt="Smiley face"> 
-                                            </header>
-                                        </section>
+            <header>
+                <button><span class="icon icon-close">close</span></button>
+                    <menu type="toolbar"><button>listo</button></menu>
+                    <h1>Aplicacion de Prueba</h1>
+            </header>
+            <header>
+                    <img id="imagen" src="imagenes/splashblanco.png" alt="Smiley face"> 
+            </header>
+        </section>
     </body>
 </html>
