Agregue estilos propio

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link href="estilos/action_menu.css" rel="stylesheet" type="text/css">
         <link href="estilos/confirm.css" rel="stylesheet" type="text/css">
         <link href="estilos/headers.css" rel="stylesheet" type="text/css">
+        <link href="estilos/propio.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <!--
